custom cart and add contact view

--- a/product/templates/product/product.html
+++ b/product/templates/product/product.html
@@ -1,5 +1,5 @@
 {% extends 'homepage/base.html' %} {% load static %} {% block title %}AHA | Product{% endblock %} {% block content %}
-<section class="hero">
+<section class="hero hero-normal">
     <div class="container">
         <div class="row">
             <div class="col-lg-3">
@@ -38,7 +38,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
