--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -1,7 +1,7 @@
 {% extends 'homepage/base.html' %} {% load static %} {% block title %}AHA | Home{% endblock %} {% block content %} {% include 'homepage/hero_section.html' %}
 
 <!-- Categories Section Begin -->
-<section class="categories">
+<section class="categories" style="margin-bottom: 50px;">
     <div class="container">
         <div class="row">
             <div class="categories__slider owl-carousel">
