--- a/cart/templates/cart/cart_details.html
+++ b/cart/templates/cart/cart_details.html
@@ -1,71 +1,116 @@
-{% extends 'homepage/base.html' %} {% block title %} Cart {% endblock title %} {% block content %}
-<h1 class="display-4 mt-4 text-center">Giỏ hàng</h1>
-<hr /> {% if total %}
-<div class="row justify-content-center">
-    <div class="col-auto">
-        <table class="table table-borderless table-striped table-responsive">
-            <thead class="thead-dark">
-                <tr>
-                    <th>Tên</th>
-                    <th>Đơn Giá</th>
-                    <th>Só lượng</th>
-                    <th>Xóa</th>
-                    <th>Tổng tiền</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for i in cart_items %}
-                <tr>
-                    <td>
-                        <a href="{% url 'product_app:details' i.product.id %}"> {{i.product.title}} </a>
-                    </td>
-                    <td>{{i.product.price}}VNĐ</td>
-                    <td>
-                        <form action="{% url 'cart:add' %}" class="form-inline" method="POST">
-                            {% csrf_token %} {{i.form.product_id}}
-                            <div class="input-group">
-                                {{i.form.quantity}}
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary btn-sm" type="submit">
-                    <i class="fa fa-shopping-cart mr-1"></i> Chỉnh sửa
-                  </button>
-                                </div>
-                            </div>
-                        </form>
-                    </td>
-                    <td>
-                        <a href="{% url 'cart:remove' i.product.id %}" class="btn btn-danger btn-sm">
-                            <i class="fa fa-times mr-1"></i> Xóa
-                        </a>
-                    </td>
-                    <td>{{i.total}}VNĐ</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-            <tfoot class="table-secondary">
-                <tr>
-                    <td colspan="3"></td>
-                    <td>Tổng tiền -</td>
-                    <td><b>{{total}}VNĐ</b></td>
-                </tr>
-            </tfoot>
-        </table>
+{% extends 'homepage/base.html' %} {% load static %} {% block title %}AHA | Cart{% endblock title %} {% block content %}
+<!-- Breadcrumb Section Begin -->
+<section class="breadcrumb-section set-bg" data-setbg="{% static 'homepage/img/breadcrumb.jpg' %}">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <div class="breadcrumb__text">
+                    <h2>Shopping Cart</h2>
+                    <div class="breadcrumb__option">
+                        <a href="{% url 'core_app:index' %}">Home</a>
+                        <span>Shopping Cart</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<div class="text-center">
-    <a href="{% url 'cart:clear' %}" class="btn btn-warning">Làm sạch giỏ</a>
-    <a href="{% url 'orders:place' %}" class="btn btn-success">Thanh Toán</a>
-</div>
+</section>
+<!-- Breadcrumb Section End -->
+
+<!-- Shoping Cart Section Begin -->
+{% if total %}
+<section class="shoping-cart spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="shoping__cart__table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th class="shoping__product">Products</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for i in cart_items %}
+                            <tr>
+                                <td class="shoping__cart__item">
+                                    <img src="{% static p.product_img.url %}" alt="">
+                                    <h5><a href="{% url 'product_app:details' i.product.id %}"> {{i.product.title}} </a></h5>
+                                </td>
+                                <td class="shoping__cart__price">
+                                    {{i.product.price}}VNĐ
+                                </td>
+                                <td class="shoping__cart__quantity">
+                                    <div class="quantity">
+                                        <form action="{% url 'cart:add' %}" class="form-inline" method="POST">
+                                            {% csrf_token %} {{i.form.product_id}}
+                                            <div class="input-group" style="padding: 0px;">
+                                                {{i.form.quantity}}
+                                                <div class="input-group-append">
+                                                    <button class="btn btn-primary btn-sm" type="submit" style="border-color:#7fad39; background-color: #7fad39;">
+                                                            Update
+                                                        </button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </td>
+                                <td class="shoping__cart__total">
+                                    {{i.total}}VNĐ
+                                </td>
+                                <td class="shoping__cart__item__close">
+                                    <a href="{% url 'cart:remove' i.product.id %}"><span class="icon_close"></span></a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="shoping__cart__btns">
+                    <a href="{% url 'product_app:product' %}" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
+                    <a href="{% url 'cart:clear' %}" class="primary-btn cart-btn cart-btn-right">
+                        Clear Cart
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="shoping__checkout">
+                    <h5>Cart Total</h5>
+                    <ul>
+                        <li>Total <span>{{total}}VNĐ</span></li>
+                    </ul>
+                    <a href="{% url 'orders:place' %}" class="primary-btn">Checkout</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Shoping Cart Section End -->
+
 {% else %}
-<div class="text-center">
-    <h3 class="font-weight-light">Giỏ hàng trống</h3>
-    <a href="{% url 'product_app:product' %}" class="btn btn-secondary">
-    Trở lại cửa hàng
-  </a>
-</div>
-{% endif %}
+
+<section class="shoping-cart spad">
+    <div class="container">
+        <div class="text-center">
+            <h2 style="margin-bottom: 20px;">Empty Cart</h2>
+            <a href="{% url 'product_app:product' %}" class="primary-btn cart-btn">
+                CONTINUE SHOPPING
+            </a>
+        </div>
+    </div>
+</section>
+
+{% endif %} {% endblock content %} {% block jsblock %}
 <script>
     let inputs = document.querySelectorAll("input.form-control");
     inputs.forEach((i) => i.classList.add("form-control-sm"));
 </script>
-{% endblock content %}
+{% endblock %}
