--- a/templates/homepage/navbar.html
+++ b/templates/homepage/navbar.html
@@ -132,7 +132,7 @@
                             </ul>
                         </li>
                         <li><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="{% url 'core_app:contacts' %}">Contact</a></li>
                     </ul>
                 </nav>
             </div>
