--- a/order/templates/order/order_list.html
+++ b/order/templates/order/order_list.html
@@ -1,4 +1,4 @@
-{% extends 'homepage/base.html' %} {% block title %}Your Orders {% endblock title %} {% block content %}
+{% extends 'homepage/base.html' %} {% block title %}AHA | Your Orders{% endblock title %} {% block content %}
 <h1 class="font-weight-light mt-3">Your Orders</h1>
 <hr />
 <ul class="list-group my-3">
