--- a/product/templates/product/product_details.html
+++ b/product/templates/product/product_details.html
@@ -1,5 +1,5 @@
 {% extends 'homepage/base.html' %} {% load static %} {% block title %}AHA | Product{% endblock %} {% block content %}
-<section class="hero">
+<section class="hero hero-normal">
     <div class="container">
         <div class="row">
             <div class="col-lg-3">
@@ -52,14 +52,9 @@
             <div class="col-lg-6 col-md-6">
                 <div class="product__details__pic">
                     <div class="product__details__pic__item">
-                        <img class="product__details__pic__item--large" src="{% static pd.product_img.url %}" alt="">
+                        <img class="product__details__pic__item--large" src="{{ pd.product_img.url }}" alt="">
                     </div>
-                    <div class="product__details__pic__slider owl-carousel">
-                        <img data-imgbigurl="img/product/details/product-details-2.jpg" src="img/product/details/thumb-1.jpg" alt="">
-                        <img data-imgbigurl="img/product/details/product-details-3.jpg" src="img/product/details/thumb-2.jpg" alt="">
-                        <img data-imgbigurl="img/product/details/product-details-5.jpg" src="img/product/details/thumb-3.jpg" alt="">
-                        <img data-imgbigurl="img/product/details/product-details-4.jpg" src="img/product/details/thumb-4.jpg" alt="">
-                    </div>
+
                 </div>
             </div>
             <div class="col-lg-6 col-md-6">
@@ -75,15 +70,22 @@
                     </div>
                     <div class="product__details__price">{{ pd.price }}VNĐ</div>
                     <p>{{ pd.description }}</p>
-                    <div class="product__details__quantity">
-                        <div class="quantity">
-                            <div class="pro-qty">
-                                <input type="text" value="1">
+
+                    <form method="POST" action="{% url 'cart:add' %}">
+                        {% csrf_token %}
+                        <div class="product__details__quantity">
+                            <div class="quantity">
+                                <div class="pro-qty">
+                                    <input type="text" name="quantity" value="1">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <a href="#" class="primary-btn">ADD TO CARD</a>
-                    <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
+                        <input type="hidden" name="product_id" value="{{ pd.id }}" />
+                        <button type="submit" class="primary-btn">ADD TO CARD</button>
+                        <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
+                    </form>
+
+
                     <ul>
                         <li><b>Availability</b> <span>In Stock</span></li>
 
