--- a/user/templates/Login/loginsuccess.html
+++ b/user/templates/Login/loginsuccess.html
@@ -4,7 +4,7 @@
     <div class="container">
         <h1>Profile</h1>
         <p>Xin chao {{ user.username }}</p>
-        <p><a href="{% url 'orders:my' %}">My order</a></p>
+        <p><a href="{% url 'order_app:my_orders' %}">My order</a></p>
     </div>
 
 </div>
