--- a/product/templates/product/product.html
+++ b/product/templates/product/product.html
@@ -210,7 +210,7 @@
                                 <ul class="product__item__pic__hover">
                                     <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                     <li>
-                                        <form method="POST" action="{% url 'cart:add' %}">
+                                        <form method="POST" action="{% url 'cart_app:add' %}">
                                             {% csrf_token %}
                                             <input type="hidden" name="quantity" value="1" />
                                             <input type="hidden" name="product_id" value="{{ p.id }}" />
