--- a/user/templates/Login/loginsuccess.html
+++ b/user/templates/Login/loginsuccess.html
@@ -2,9 +2,9 @@
 
 <div class="LoginSuccess">
     <div class="container">
-        <h1>Profile</h1>
-        <p>Xin chao {{ user.username }}</p>
-        <p><a href="{% url 'order_app:my_orders' %}">My order</a></p>
+        <h2>Profile</h2>
+        <div style="color: #7fad39; margin-top: 25px; font-size: larger;  "><b>Xin chao {{ user.username }}</b></div>
+        <div style="margin-top: 25px; font-size: larger;"><a href="{% url 'order_app:my_orders' %}">My order</a></div>
     </div>
 
 </div>
