--- a/product/templates/product/product.html
+++ b/product/templates/product/product.html
@@ -19,13 +19,10 @@
             <div class="col-lg-9">
                 <div class="hero__search">
                     <div class="hero__search__form">
-                        <form action="#">
-                            <div class="hero__search__categories">
-                                All Categories
-                                <span class="arrow_carrot-down"></span>
-                            </div>
-                            <input type="text" placeholder="What do yo u need?">
-                            <button type="submit" class="site-btn">SEARCH</button>
+                        <form  method="POST" action="{% url 'product_app:search' %}">
+                            {% csrf_token %} 
+                            <input type="search" name="q" placeholder="Search">
+                            <button class="site-btn" type="submit">Search</button>
                         </form>
                     </div>
                     <div class="hero__search__phone">
