--- a/templates/homepage/hero_section.html
+++ b/templates/homepage/hero_section.html
@@ -10,7 +10,10 @@
                         <span>Categories</span>
                     </div>
                     <ul>
-                        <li><a href="#">Hello</a></li>
+                        <li><a href="#">Vegetables</a></li>
+                        <li><a href="{% url 'product_app:freshfruit'%}">Fresh Fruit</a></li>
+                        <li><a href="#">Dried Fruit</a></li>
+                        <li><a href="#">Drink Fruit</a></li>
                         {% if categories %} {% for i in categories %}
                         <li><a href="#">{{ i.title }}</a></li>
 
@@ -21,13 +24,14 @@
             <div class="col-lg-9">
                 <div class="hero__search">
                     <div class="hero__search__form">
-                        <form action="#">
+                        <form action="{%url 'product_app:search'%}" method="POST">
+                            {% csrf_token %} 
                             <div class="hero__search__categories">
                                 All Categories
                                 <span class="arrow_carrot-down"></span>
                             </div>
-                            <input type="text" placeholder="What do yo u need?">
-                            <button type="submit" class="site-btn">SEARCH</button>
+                            <input type="text" name ="q" placeholder="What do yo u need?">
+                            <button type="submit" class="site-btn">Search</button>
                         </form>
                     </div>
                     <div class="hero__search__phone">
