--- a/order/templates/order/checkout.html
+++ b/order/templates/order/checkout.html
@@ -48,7 +48,7 @@
                             <h5 class="card-text font-weight-light">No items in cart.</h5>
                             {% endfor %}
 
-                            <div class="checkout__order__total">Total <span>{{order.total_price}}VNĐ</span></div>
+                            <div class="checkout__order__total">Total <span>{{cart.get_total_price}}VNĐ</span></div>
 
 
                             {% if cart.empty %}
