--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -7,22 +7,22 @@
             <div class="categories__slider owl-carousel">
                 <div class="col-lg-3">
                     <div class="categories__item set-bg" data-setbg="{% static 'homepage/img/categories/cat-1.jpg' %}">
-                        <h5><a href="#">Fresh Fruit</a></h5>
+                        <h5><a href="{% url 'product_app:freshfruit'%}">Fresh Fruit</a></h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="categories__item set-bg" data-setbg="{% static 'homepage/img/categories/cat-2.jpg' %}">
-                        <h5><a href="#">Dried Fruit</a></h5>
+                        <h5><a href="{% url 'product_app:driedfruit'%}">Dried Fruit</a></h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="categories__item set-bg" data-setbg="{% static 'homepage/img/categories/cat-3.jpg' %}">
-                        <h5><a href="#">Vegetables</a></h5>
+                        <h5><a href="{% url 'product_app:vegetable'%}">Vegetables</a></h5>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="categories__item set-bg" data-setbg="{% static 'homepage/img/categories/cat-4.jpg' %}">
-                        <h5><a href="#">Drink Fruit</a></h5>
+                        <h5><a href="{% url 'product_app:drinkfruit'%}">Drink Fruit</a></h5>
                     </div>
                 </div>
 
