--- a/product/templates/product/product.html
+++ b/product/templates/product/product.html
@@ -1,48 +1,5 @@
-{% extends 'homepage/base.html' %} {% load static %} {% block title %}AHA | Product{% endblock %} {% block content %}
-<section class="hero hero-normal">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="hero__categories">
-                    <div class="hero__categories__all">
-                        <i class="fa fa-bars"></i>
-                        <span>Categories</span>
-                    </div>
-                    <ul>
-                        <li><a href="#">Vegetables</a></li>
-                        <li><a href="#">Fresh Fruit</a></li>
-                        <li><a href="#">Dried Fruit</a></li>
-                        <li><a href="#">Drink Fruit</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-9">
-                <div class="hero__search">
-                    <div class="hero__search__form">
-                        <form action="#">
-                            <div class="hero__search__categories">
-                                All Categories
-                                <span class="arrow_carrot-down"></span>
-                            </div>
-                            <input type="text" placeholder="What do yo u need?">
-                            <button type="submit" class="site-btn">SEARCH</button>
-                        </form>
-                    </div>
-                    <div class="hero__search__phone">
-                        <div class="hero__search__phone__icon">
-                            <i class="fa fa-phone"></i>
-                        </div>
-                        <div class="hero__search__phone__text">
-                            <h5>+012 345 678</h5>
-                            <span>support 24/7 time</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Hero Section End -->
+{% extends 'homepage/base.html' %} {% load static %} {% block title %}AHA | Product{% endblock %} {% block content %} {% include 'homepage/hero_section.html' %}
+
 
 <!-- Breadcrumb Section Begin -->
 <section class="breadcrumb-section set-bg" data-setbg="{% static 'homepage/img/breadcrumb.jpg' %}">
@@ -73,9 +30,10 @@
                     </div>
                     <div class="row">
                         <div class="product__discount__slider owl-carousel">
+                            {%for i in product_item%}
                             <div class="col-lg-4">
                                 <div class="product__discount__item">
-                                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-1.jpg">
+                                    <div class="product__discount__item__pic set-bg" data-setbg="{{i.product_img.url}}">
                                         <div class="product__discount__percent">-20%</div>
                                         <ul class="product__item__pic__hover">
                                             <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -85,96 +43,12 @@
                                     </div>
                                     <div class="product__discount__item__text">
                                         <span>Dried Fruit</span>
-                                        <h5><a href="#">Raisin’n’nuts</a></h5>
-                                        <div class="product__item__price">$30.00 <span>$36.00</span></div>
+                                        <h5><a href="#">{{i.title}}</a></h5>
+                                        <div class="product__item__price">{{i.price}} <span>$36.00</span></div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
-                                <div class="product__discount__item">
-                                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-2.jpg">
-                                        <div class="product__discount__percent">-20%</div>
-                                        <ul class="product__item__pic__hover">
-                                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="product__discount__item__text">
-                                        <span>Vegetables</span>
-                                        <h5><a href="#">Vegetables’package</a></h5>
-                                        <div class="product__item__price">$30.00 <span>$36.00</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="product__discount__item">
-                                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-3.jpg">
-                                        <div class="product__discount__percent">-20%</div>
-                                        <ul class="product__item__pic__hover">
-                                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="product__discount__item__text">
-                                        <span>Dried Fruit</span>
-                                        <h5><a href="#">Mixed Fruitss</a></h5>
-                                        <div class="product__item__price">$30.00 <span>$36.00</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="product__discount__item">
-                                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-4.jpg">
-                                        <div class="product__discount__percent">-20%</div>
-                                        <ul class="product__item__pic__hover">
-                                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="product__discount__item__text">
-                                        <span>Dried Fruit</span>
-                                        <h5><a href="#">Raisin’n’nuts</a></h5>
-                                        <div class="product__item__price">$30.00 <span>$36.00</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="product__discount__item">
-                                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-5.jpg">
-                                        <div class="product__discount__percent">-20%</div>
-                                        <ul class="product__item__pic__hover">
-                                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="product__discount__item__text">
-                                        <span>Dried Fruit</span>
-                                        <h5><a href="#">Raisin’n’nuts</a></h5>
-                                        <div class="product__item__price">$30.00 <span>$36.00</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="product__discount__item">
-                                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-6.jpg">
-                                        <div class="product__discount__percent">-20%</div>
-                                        <ul class="product__item__pic__hover">
-                                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="product__discount__item__text">
-                                        <span>Dried Fruit</span>
-                                        <h5><a href="#">Raisin’n’nuts</a></h5>
-                                        <div class="product__item__price">$30.00 <span>$36.00</span></div>
-                                    </div>
-                                </div>
-                            </div>
+                            {%endfor%}
                         </div>
                     </div>
                 </div>
@@ -182,16 +56,31 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-5">
                             <div class="filter__sort">
-                                <span>Sort By</span>
-                                <select>
-                                    <option value="0">Default</option>
-                                    <option value="1">Price</option>
-                                </select>
+                                <span style="margin-left: 270px; margin-bottom: 15px;"><b> Sort By</b></span>
+                                <form action="" method="get">
+                                    <ul style="margin-left: 50px;" class=" d-flex align-items-center justify-content-lg-end mb-0 ml-5">
+
+                                      
+                                      <li class="list-inline-item" >                                    
+                                            <select class="selectpicker ml-auto" name="sorting" data-width="200"
+                                              data-style="bs-select-form-control" data-title="Phân loại">
+                                              <option value="title" name="sorting">Tên</option>
+                                              <option value="low-high" name="sorting">Giá: Từ thấp đến cao</option>
+                                              <option value="high-low" name="sorting">Giá: Từ cao đến thấp</option>
+                                            </select>                    
+                                      </li>
+                                      <li class="list-inline-item">
+                                        <input type="submit" value="Chọn">     
+                                      </li>
+                                                
+                      
+                                    </ul>   
+                                    </form>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4">
                             <div class="filter__found">
-                                <h6><span>16</span> Products found</h6>
+                                <h6><span>{{product_count}}</span> Products found</h6>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-3">
@@ -228,16 +117,61 @@
                         </div>
                     </div>
                     {% endfor %} {% endif %}
+                    {% if product_items and not product_item%} {% for p in product_items %}
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="{{p.product_img.url }}">
+                                <ul class="product__item__pic__hover">
+                                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                                    <li>
+                                        <form method="POST" action="{% url 'cart_app:add' %}">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="quantity" value="1" />
+                                            <input type="hidden" name="product_id" value="{{ p.id }}" />
+                                            <button type="submit" class="btn btn-primary">
+                                            <i class="fa fa-shopping-cart"></i>
+                                        </button>
+                                        </form>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a href="{% url 'product_app:details' p.id %}">{{ p.title }}</a></h6>
+                                <h5>{{ p.price }}VNĐ</h5>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %} {% endif %}
                 </div>
-                <div class="product__pagination">
-                    <a href="#">1</a>
-                    <a href="#">2</a>
-                    <a href="#">3</a>
-                    <a href="#"><i class="fa fa-long-arrow-right"></i></a>
-                </div>
+        
+        <div class="row">
+            <div class="col-lg-12">
+               
+                {% if product_items.has_other_pages and not product_item %}
+                <ul class="pagination" style="margin-left: 493px;">
+                  {% if product_items.has_previous %}
+                    <li><a class="pagination" style= " margin-top: 0px; margin-left :14px; border: 1px ridge #7fad39; size: 50px; padding: 20px;" href="?page={{ product_items.previous_page_number }}">&laquo;</a></li>
+                  {% else %}
+                    <li style="color: aliceblue;" class="disabled"><span>&laquo;</span></li>
+                  {% endif %}
+                  {% for i in product_items.page_range %}
+                    {% if product_items.number == i %}
+                      <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                    {% else %}
+                      <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% endif %}
+                  {% endfor %}
+                  {% if product_items.has_next %}
+                    <li style="size: 50px;"><a class="pagination" href="?page={{ product_items.next_page_number }}" style= "margin-top: 0px; margin-left :21px; border: 1px ridge #7fad39; size: 50px; padding: 20px;" >&raquo;</a></li>
+                  {% else %}
+                    <li style="color:antiquewhite ;" class="disabled"><span>&raquo;</span></li>
+                  {% endif %}
+                </ul>
+              {% endif %}
+           
             </div>
         </div>
-    </div>
+   
 </section>
 <!-- Product Section End -->
 
