--- a/templates/homepage/hero_section.html
+++ b/templates/homepage/hero_section.html
@@ -10,24 +10,23 @@
                         <span>Categories</span>
                     </div>
                     <ul>
-                        <li><a href="#">Hello</a></li>
-                        {% if categories %} {% for i in categories %}
-                        <li><a href="#">{{ i.title }}</a></li>
+                        <li><a href="{% url 'product_app:vegetable'%}">Vegetables</a></li>
+                        <li><a href="{% url 'product_app:freshfruit'%}">Fresh Fruit</a></li>
+                        <li><a href="{% url 'product_app:driedfruit'%}">Dried Fruit</a></li>
+                        <li><a href="{% url 'product_app:drinkfruit'%}">Drink Fruit</a></li>
 
-                        {% endfor %} {% endif %}
+                       
                     </ul>
                 </div>
             </div>
             <div class="col-lg-9">
                 <div class="hero__search">
                     <div class="hero__search__form">
-                        <form action="#">
-                            <div class="hero__search__categories">
-                                All Categories
-                                <span class="arrow_carrot-down"></span>
-                            </div>
-                            <input type="text" placeholder="What do yo u need?">
-                            <button type="submit" class="site-btn">SEARCH</button>
+                        <form action="{%url 'product_app:search'%}" method="POST">
+                            {% csrf_token %} 
+                            
+                            <input type="text" name ="q" placeholder="What do yo u need?">
+                            <button type="submit" class="site-btn">Search</button>
                         </form>
                     </div>
                     <div class="hero__search__phone">
@@ -40,14 +39,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="hero__item set-bg" data-setbg="{% static 'homepage/img/hero/banner.jpg' %}">
+                <!-- <div class="hero__item set-bg" data-setbg="{% static 'homepage/img/hero/banner.jpg' %}">
                     <div class="hero__text">
                         <span>FRUIT FRESH</span>
                         <h2>Vegetable <br />100% Organic</h2>
                         <p>Free Pickup and Delivery Available</p>
                         <a href="{% url 'product_app:product'%}" class="primary-btn">SHOP NOW</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
