--- a/templates/homepage/navbar.html
+++ b/templates/homepage/navbar.html
@@ -139,9 +139,11 @@
                 <div class="header__cart">
                     <ul>
                         <li><a href="#"><i class="fa fa-heart"></i> <span>0</span></a></li>
-                        <li><a href="{% url 'cart_app:cart_details' %}"><i class="fa fa-shopping-bag"></i> <span>0</span></a></li>
+                        <li><a href="{% url 'cart_app:cart_details' %}"><i class="fa fa-shopping-bag"></i> <span> {{request.session.cart.keys|length}}</span></a></li>
                     </ul>
-                    <div class="header__cart__price">item: <span>0</span></div>
+                    <div class="header__cart__price">item: <span>
+                                    {{request.session.cart.keys|length}}
+                    </span></div>
                 </div>
             </div>
         </div>
