--- a/product/templates/product/product_details.html
+++ b/product/templates/product/product_details.html
@@ -1,49 +1,5 @@
-{% extends 'homepage/base.html' %} {% load static %} {% block title %}AHA | Product{% endblock %} {% block content %}
-<section class="hero hero-normal">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="hero__categories">
-                    <div class="hero__categories__all">
-                        <i class="fa fa-bars"></i>
-                        <span>Categories</span>
-                    </div>
-                    <ul>
-                        <li><a href="#">Vegetables</a></li>
-                        <li><a href="#">Fresh Fruit</a></li>
-                        <li><a href="#">Dried Fruit</a></li>
-                        <li><a href="#">Drink Fruit</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-9">
-                <div class="hero__search">
-                    <div class="hero__search__form">
-                        <form action="#">
-                            <div class="hero__search__categories">
-                                All Categories
-                                <span class="arrow_carrot-down"></span>
-                            </div>
-                            <input type="text" placeholder="What do yo u need?">
-                            <button type="submit" class="site-btn">SEARCH</button>
-                        </form>
-                    </div>
-                    <div class="hero__search__phone">
-                        <div class="hero__search__phone__icon">
-                            <i class="fa fa-phone"></i>
-                        </div>
-                        <div class="hero__search__phone__text">
-                            <h5>+012 345 678</h5>
-                            <span>support 24/7 time</span>
-                        </div>
-                    </div>
-                </div>
+{% extends 'homepage/base.html' %} {% load static %} {% block title %}AHA | Product{% endblock %} {% block content %} {% include 'homepage/hero_section.html' %}
 
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Hero Section End -->
 
 <!-- Product Details Section Begin -->
 <section class="product-details spad">
@@ -60,14 +16,7 @@
             <div class="col-lg-6 col-md-6">
                 <div class="product__details__text">
                     <h3>{{ pd.title }}</h3>
-                    <div class="product__details__rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-o"></i>
-                        <span>(18 reviews)</span>
-                    </div>
+
                     <div class="product__details__price">{{ pd.price }}VNĐ</div>
                     <p>{{ pd.description }}</p>
 
@@ -82,7 +31,7 @@
                         </div>
                         <input type="hidden" name="product_id" value="{{ pd.id }}" />
                         <button type="submit" class="primary-btn">ADD TO CARD</button>
-                        <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
+
                     </form>
 
 
