--- a/product/templates/product/search.html
+++ b/product/templates/product/search.html
@@ -1,42 +1,41 @@
-{% extends 'homepage/base.html' %}
-{% block title %}AHA | Search {% endblock %}
-{% block content %}
-{% include 'homepage/hero_section.html' %}
+{% extends 'homepage/base.html' %} {% block title %}AHA | Search {% endblock %} {% block content %} {% include 'homepage/hero_section.html' %}
 <section class="product spad">
     <div class="container">
-        
-            <div class="col-lg-12 col-md-7">
 
-                <div class="row">
-                    {% for data in data %}
-                    
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="{{data.product_img.url}}">
-                                    <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li>
-                                            <form method="POST" action="{% url 'cart_app:add' %}">
-                                                {% csrf_token %}
-                                                <input type="hidden" name="quantity" value="1" />
-                                                <input type="hidden" name="product_id"  value="{{ data.id }}"/>
-                                                <button type="submit" class="btn btn-primary">
+        <div class="col-lg-12 col-md-7">
+
+            <div class="row">
+                {% if data %} {% for data in data %}
+
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="{{data.product_img.url}}">
+                            <ul class="product__item__pic__hover">
+
+                                <li>
+                                    <form method="POST" action="{% url 'cart_app:add' %}">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="quantity" value="1" />
+                                        <input type="hidden" name="product_id" value="{{ data.id }}" />
+                                        <button type="submit" class="btn btn-primary">
                                                 <i class="fa fa-shopping-cart"></i>
                                             </button>
-                                            </form>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="product__item__text">
-                                    <h6><a href="{% url 'product_app:details' data.id %}">{{ data.title }}</a></h6>
-                                    <h5>{{ data.price }}VNĐ</h5>
-                                </div>
-                            </div>
+                                    </form>
+                                </li>
+                            </ul>
                         </div>
-                    
-                    {% endfor %}
+                        <div class="product__item__text">
+                            <h6><a href="{% url 'product_app:details' data.id %}">{{ data.title }}</a></h6>
+                            <h5>{{ data.price }}VNĐ</h5>
+                        </div>
                     </div>
+                </div>
+
+                {% endfor %} {% else %}
+                <h3>No Products Found</h3>
+                {% endif %}
             </div>
+        </div>
     </div>
-</section>        
-{% endblock  %}
+</section>
+{% endblock %}
